# pgsql-csv-uploader

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: dbwriter.py
src/postgres_csv_uploader/: uploader.py
tests/: conftest.py  test_dbwriter.py
