[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "postgres_csv_uploader"
version = "0.1.0"
authors = [
  { name="Kanyes Thaker", email="kanyes.thaker@gmail.com" },
]
description = "A small utility to upload CSVs to Postgres without needing to specify the table schema"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]
dependencies = [
    "numpy>=1.23.0",
    "pandas>=1.4.0",
    "psycopg2>=2.7.0",
    "SQLAlchemy>=1.4.0"
]
